sidebar bg now just visible-yes/no based on sidebar state (was opening from left). Modified button element, fixed onClick error(throws error if do not pass function)

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,5 @@ button,
 button:focus,
 button:active {
   outline: none;
-  background: transparent;
   border: 1px solid transparent;
 }
